# fourtitude

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  build.ps1
.github/workflows/: stylecheck.yml
fourditor/: BUILD  pom.xml
fourditor/src/main/java/dev/fempolyhedron/fourditor/: CppCodegen.java  ElementDescriptor.java  ElementRegistry.java  FourElement.java  FourParser.java  Main.java
fourditor/src/main/java/dev/fempolyhedron/fourditor/elements/: ButtonDescriptor.java  ContainerDescriptor.java  FrameDescriptor.java  Heading1Descriptor.java  Heading2Descriptor.java  Heading3Descriptor.java  ImageDescriptor.java  InputDescriptor.java  ListDescriptor.java  ParagraphDescriptor.java  TextDescriptor.java
src/: BUILD
src/fourtitude/: Fourtitude.c  FourtitudeDocument.cpp  FourtitudeElement.c  FourtitudeElement.cpp  FourtitudeElements.c  FourtitudeEventSystem.c  FourtitudeForm.cpp  FourtitudeFormC.c  FourtitudeLog.c  FourtitudeLog.h  FourtitudeStyle.c  FourtitudeStyle.h  FourtitudeWindow.c  FourtitudeWindow.cpp  fourtitudec17.h  fourtitudecpp.h
toolchain/: BUILD
tools/: BUILD  stylecheck.py
