module(
    name    = "fourtitude",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc",   version = "0.2.17")
bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "platforms",  version = "1.0.0")
bazel_dep(name = "rules_python", version = "0.32.0")

register_toolchains("//toolchain:gcc_toolchain_def")